--- a/modules/docs/src/Volo.Docs.Domain/Volo/Docs/Localization/Domain/es.json
+++ b/modules/docs/src/Volo.Docs.Domain/Volo/Docs/Localization/Domain/es.json
@@ -1,19 +1,38 @@
 {
-  "culture": "es",
-  "texts": {
-    "Documents": "Documentos",
-    "BackToWebsite": "Regresar al sitio",
-    "Contributors": "Contribuidores",
-    "ShareOn": "Compartilhar no",
-    "Version": "Versão",
-    "Edit": "Editar",
-    "Delete": "Excluir",
-    "InThisDocument": "En este documento",
-    "GoToTop": "Subir",
-    "Projects": "Proyecto(s)",
-    "NoProjectWarning": "Não há projetos ainda!",
-    "DocumentNotFound": "Ups! O documento solicitado não foi encontrado!",
-    "NavigationDocumentNotFound": "Esta versão não possui um documento de navegação!",
-    "DocumentNotFoundInSelectedLanguage": "Documento no idioma desejado não foi encontrado. Documento no idioma padrão é mostrado."
-  }
+	"culture": "es",
+	"texts": {
+		"Documents": "Documentos",
+		"BackToWebsite": "Regresar al sitio",
+		"Contributors": "Contribuidores",
+		"ShareOn": "Compartir en",
+		"Version": "Version",
+		"Edit": "Editar",
+		"LastEditTime": "Última edición",
+		"Delete": "Eliminar",
+		"ClearCache": "Limpiar cache",
+		"ClearCacheConfirmationMessage": "Esta seguro que desea limpiar el cache del proyecto \"{0}\"",
+		"ReIndexAllProjects": "ReIndexar todos los proyectos",
+		"ReIndexProject": "ReIndexar proyecto",
+		"ReIndexProjectConfirmationMessage":"Esta seguro que desea reindexar el proyecto \"{0}\"",
+		"SuccessfullyReIndexProject": "Se ha reindexado el proyecto exitosamente \"{0}\"",
+		"ReIndexAllProjectConfirmationMessage": "Esta seguro que desea reindexar todos los proyectos?",
+		"SuccessfullyReIndexAllProject": "Se han reindexado los proyectos exitosamente.",
+		"InThisDocument": "En este documento",
+		"GoToTop": "Ir al inicio",
+		"Projects": "Proyecto(s)",
+		"NoProjectWarning": "No hay proyectos disponibles!",
+		"DocumentNotFound": "Oops, el documento peticionado no existe!",
+		"ProjectNotFound": "Oops, el proyecto peticionado no existe!",
+		"NavigationDocumentNotFound": "Esta version no cuenta con un documento de navegación!",
+		"DocumentNotFoundInSelectedLanguage": "No existe un documento para el idioma seleccionado. Se ha elegido el idioma predeterminado para mostrar el documento.",
+		"FilterTopics": "Filtrar temas",
+		"FullSearch": "Buscar en documentos",
+		"Volo.Docs.Domain:010001": "No se ha habilitado la búsqueda elastica.",
+		"MultipleVersionDocumentInfo": "Este documento cuenta con multiples versiones. Seleccione la version deseada.",
+		"New": "Nuevo",
+		"Upd": "Upd",
+		"NewExplanation": "Creado en las últimas dos semanas.",
+		"UpdatedExplanation": "Actualizado en las últimas dos semanas.",
+		"Volo.Docs.Domain:010002": "El nombre de búsqueda {ShortName} ya existe."
+	}
 }
